log
Wed 20 Sep 2023 11:15:50 PM UTC: 
 tests:  0|4
total_score: 0/70
c214f27
Thu 28 Sep 2023 04:18:24 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7a047a0
Thu 28 Sep 2023 07:29:09 AM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
77fb7b1
Thu 28 Sep 2023 07:29:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b107076
Thu 28 Sep 2023 07:30:03 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a0a1ac5
Thu 28 Sep 2023 07:33:58 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:22: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   21 |   if (pq->size == 0) return;
      |                      ^~~~~~
heap.c:20:7: note: declared here
   20 | void* heap_top(Heap* pq){
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4387e93
Thu 28 Sep 2023 07:34:08 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
35d6244
Thu 28 Sep 2023 07:52:54 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
8d33349
Thu 28 Sep 2023 07:56:29 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:10: error: expected expression before ‘<’ token
   33 |   if (pq-<size == pq-<capac){
      |          ^
heap.c:35:73: error: expected ‘;’ before ‘}’ token
   35 |     pq->heapArray = realloc(pq->heapArray, pq->capac * sizeof(heapElem))
      |                                                                         ^
      |                                                                         ;
   36 |   }
      |   ~                                                                      
Compilation failed
506e7b8
Thu 28 Sep 2023 07:56:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:10: error: expected expression before ‘<’ token
   33 |   if (pq-<size == pq-<capac){
      |          ^
Compilation failed
014d2ee
Thu 28 Sep 2023 07:57:07 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
db3b58f
Thu 28 Sep 2023 08:07:13 AM UTC: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:17: error: ‘K’ undeclared (first use in this function)
   39 |   pq->heapArray[K].data = fata:
      |                 ^
heap.c:39:17: note: each undeclared identifier is reported only once for each function it appears in
heap.c:39:27: error: ‘fata’ undeclared (first use in this function); did you mean ‘data’?
   39 |   pq->heapArray[K].data = fata:
      |                           ^~~~
      |                           data
heap.c:39:31: error: expected ‘;’ before ‘:’ token
   39 |   pq->heapArray[K].data = fata:
      |                               ^
      |                               ;
Compilation failed
b45c62c
Thu 28 Sep 2023 08:07:34 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:17: error: ‘K’ undeclared (first use in this function)
   39 |   pq->heapArray[K].data = fata;
      |                 ^
heap.c:39:17: note: each undeclared identifier is reported only once for each function it appears in
heap.c:39:27: error: ‘fata’ undeclared (first use in this function); did you mean ‘data’?
   39 |   pq->heapArray[K].data = fata;
      |                           ^~~~
      |                           data
Compilation failed
c6a89f4
Thu 28 Sep 2023 08:07:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:17: error: ‘K’ undeclared (first use in this function)
   39 |   pq->heapArray[K].data = data;
      |                 ^
heap.c:39:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3b502f5
Thu 28 Sep 2023 08:09:15 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:17: error: ‘K’ undeclared (first use in this function)
   39 |   pq->heapArray[K].data = data;
      |                 ^
heap.c:39:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
404ebdb
Thu 28 Sep 2023 08:10:39 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
e9a9314
Thu 28 Sep 2023 08:11:42 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:20: error: ‘heapElem’ {aka ‘struct nodo’} has no member named ‘date’; did you mean ‘data’?
   39 |   pq->heapArray[k].date = data;
      |                    ^~~~
      |                    data
Compilation failed
e0569b4
Thu 28 Sep 2023 08:11:57 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
9fa9a79
Mon 16 Oct 2023 12:27:44 AM UTC: 
 heap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:64:72: error: expected ‘)’ before ‘;’ token
   64 |     pq->heapArray = realloc(pq->heapArray, pq->capac * sizeof(heapElem);
      |                            ~                                           ^
      |                                                                        )
heap.c:64:73: error: expected ‘;’ before ‘}’ token
   64 |     pq->heapArray = realloc(pq->heapArray, pq->capac * sizeof(heapElem);
      |                                                                         ^
      |                                                                         ;
   65 |   }
      |   ~                                                                      
Compilation failed
76c51e8
Mon 16 Oct 2023 12:30:20 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
437b66b
Mon 16 Oct 2023 12:40:33 AM UTC: 
 heap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:61:3: error: implicit declaration of function ‘heapify_down’ [-Werror=implicit-function-declaration]
   61 |   heapify_down(pq, 0);
      |   ^~~~~~~~~~~~
heap.c: At top level:
heap.c:69:6: error: conflicting types for ‘heapify_down’; have ‘void(Heap *, int)’ {aka ‘void(struct Heap *, int)’} [-Werror]
   69 | void heapify_down(Heap* pq, int k){
      |      ^~~~~~~~~~~~
heap.c:61:3: note: previous implicit declaration of ‘heapify_down’ with type ‘void(Heap *, int)’ {aka ‘void(struct Heap *, int)’}
   61 |   heapify_down(pq, 0);
      |   ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0dd5792
Mon 16 Oct 2023 12:46:23 AM UTC: 
 heap.c | 25 ++++++++++++-------------
 1 file changed, 12 insertions(+), 13 deletions(-)
 tests:  7|1
total_score: 45/70
09c3e55
Mon 16 Oct 2023 12:49:05 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
13ae37c
